; ModuleID = '/home/carl/AnghaBench/linux/drivers/hwmon/extr_max6621.c_max6621_read_string.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/hwmon/extr_max6621.c_max6621_read_string.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.device = type { i32 }

@max6621_temp_labels = common dso_local global i8** null, align 8
@EOPNOTSUPP = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.device*, i32, i32, i32, i8**)* @max6621_read_string to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @max6621_read_string(%struct.device* %0, i32 %1, i32 %2, i32 %3, i8** %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca %struct.device*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i8**, align 8
  store %struct.device* %0, %struct.device** %7, align 8
  store i32 %1, i32* %8, align 4
  store i32 %2, i32* %9, align 4
  store i32 %3, i32* %10, align 4
  store i8** %4, i8*** %11, align 8
  %12 = load i32, i32* %8, align 4
  switch i32 %12, label %25 [
    i32 129, label %13
  ]

13:                                               ; preds = %5
  %14 = load i32, i32* %9, align 4
  switch i32 %14, label %22 [
    i32 128, label %15
  ]

15:                                               ; preds = %13
  %16 = load i8**, i8*** @max6621_temp_labels, align 8
  %17 = load i32, i32* %10, align 4
  %18 = sext i32 %17 to i64
  %19 = getelementptr inbounds i8*, i8** %16, i64 %18
  %20 = load i8*, i8** %19, align 8
  %21 = load i8**, i8*** %11, align 8
  store i8* %20, i8** %21, align 8
  store i32 0, i32* %6, align 4
  br label %28

22:                                               ; preds = %13
  %23 = load i32, i32* @EOPNOTSUPP, align 4
  %24 = sub nsw i32 0, %23
  store i32 %24, i32* %6, align 4
  br label %28

25:                                               ; preds = %5
  %26 = load i32, i32* @EOPNOTSUPP, align 4
  %27 = sub nsw i32 0, %26
  store i32 %27, i32* %6, align 4
  br label %28

28:                                               ; preds = %25, %22, %15
  %29 = load i32, i32* %6, align 4
  ret i32 %29
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
